[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/interface.gd" type="Script" id=1]

[node name="interface" type="Control"]
anchor_left = 0.0015625
anchor_top = -0.00277778
anchor_right = 0.314063
anchor_bottom = 0.483333
margin_right = 880.0
margin_bottom = 370.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InterRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -125.0
margin_bottom = 125.0
color = Color( 0.0392157, 0, 0.356863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InterRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -90.0
margin_right = 100.0
margin_bottom = 90.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show_grid" type="CheckBox" parent="InterRect/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
text = "Show Grid"

[node name="show_vectors" type="CheckBox" parent="InterRect/VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 63.0
text = "Show Vectors"

[node name="show_pressure" type="CheckBox" parent="InterRect/VBoxContainer"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 102.0
text = "Show Pressure"

[node name="Grid_dim" type="Label" parent="InterRect/VBoxContainer"]
margin_top = 117.0
margin_right = 200.0
margin_bottom = 131.0

[node name="N_Particles" type="Label" parent="InterRect/VBoxContainer"]
margin_top = 146.0
margin_right = 200.0
margin_bottom = 160.0

[connection signal="pressed" from="InterRect/VBoxContainer/show_grid" to="." method="_on_show_grid_pressed"]
[connection signal="pressed" from="InterRect/VBoxContainer/show_vectors" to="." method="_on_show_vectors_pressed"]
[connection signal="pressed" from="InterRect/VBoxContainer/show_pressure" to="." method="_on_show_pressure_pressed"]
